--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     </form>
     <h1 class="hidden" id="greeting"></h1>
     <h2 id="clock">00:00</h2>
-    <div id="quote">
+    <div id="quotes">
       <span></span>
       <span></span>
     </div>
     <script src="app.js"></script>
     <script src="clock.js"></script>
     <script src="quotes.js"></script>
+    <script src="background.js"></script>
   </body>
 </html>
