--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h2 id="clock">00:00</h2>
     <form id="login-form" class="hidden">
       <input
         required
@@ -18,7 +19,10 @@
       <input type="submit" value="Log in" />
     </form>
     <h1 class="hidden" id="greeting"></h1>
-    <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" required>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quotes">
       <span></span>
       <span></span>
@@ -27,5 +31,6 @@
     <script src="clock.js"></script>
     <script src="quotes.js"></script>
     <script src="background.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
