Only button left

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <h2 id="clock">00:00</h2>
     <form id="login-form" class="hidden">
       <input
+      class = "name_input"
         required
         maxlength="15"
         type="text"
-        placeholder="What is your name?"
+        placeholder="Type your name here"
       />
-      <input type="submit" value="Log in" />
     </form>
     <h1 class="hidden" id="greeting"></h1>
     <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" required>
+      <input type="text" placeholder="Write a To Do Here" required>
     </form>
     <ul id="todo-list"></ul>
     <div id="quotes">
