시간/ 투두 앱 만들기

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2 id="clock">00:00</h2>
-    <form id="login-form" class="hidden">
-      <input
-      class = "name_input"
+    <section class = "center">
+      <h2 id="clock">00:00</h2>
+      <form id="login-form" class="hidden">
+        <input
+        class = "name_input"
         required
         maxlength="15"
         type="text"
         placeholder="Type your name here"
-      />
-    </form>
-    <h1 class="hidden" id="greeting"></h1>
-    <form id="todo-form">
+        />
+      </form>
+      <h1 class="hidden" id="greeting"></h1>
+      <form id="todo-form">
       <input type="text" placeholder="Write a To Do Here" required>
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quotes">
+      </form>
+      <ul id="todo-list"></ul>
+    </section>
+      <div id="quotes">
       <span></span>
       <span></span>
     </div>
